--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@ html {
   grid-template-rows: 50px;
   grid-template-areas: "about store . gmail image menu sign-in";
 }
+
 a {
   text-decoration: none;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
 }
 
 #about {
@@ -30,7 +32,7 @@ a {
   justify-self: center;
   align-self: center;
   }
-#image {
+#images {
   grid-area: image;
   justify-self: center;
   align-self: center;
@@ -40,7 +42,12 @@ a {
   justify-self: center;
   align-self: center;
   }
-  #sign-in {grid-area: sign-in;
-  justify-self: center;
-  align-self: center;
+#sign-in {
+   grid-area: sign-in;
+   justify-self: center;
+   align-self: center;
+  }
+  
+  #header {
+    justify-content: space-evenly;
   }
