--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
    height: 100%;
    min-height: 100%;
+   min-width: 100%;
  }
  
  
@@ -70,22 +71,10 @@ html {
     grid-template-areas: ". logo . " ". search ." ". flexbox ." ". google-text .";
  }
  
- 
  #logo {
     grid-area: logo;
     justify-self: center;
     align-self: end;
- }
- 
- #searchicon {
-     background: url(//web.archive.org/web/20191130234759im_/https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png) 0 0 no-repeat;
-     height: 24px;
-     width: 24px;
-     background-size: 24px;
-     vertical-align: middle;
-     line-height: 44px;
-     font-size: small;
-     color: #222;
  }
  
  #search {
@@ -103,7 +92,7 @@ html {
  
  input[type=text] {
     background-image: url('https://www.w3schools.com/howto/searchicon.png'), url('http://web.archive.org/web/20191130234609im_/https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png');
-    background-position: 8px 8px, 450px;
+    background-position: 8px 8px, 448px;
     background-size: 17px, 21px;
     background-repeat: no-repeat, no-repeat;
  }
